[package]
name = "lol"
version = "0.1.0"
authors = ["Joshua Schappel <jmschappel12@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.11.3"
futures = "0.3.5"
reqwest = "0.10.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2.21", features = ["full"] }
